# chorus-bridge

./: .gitignore  CONDUCTOR_COMMUNICATION.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  README-PRODUCTION.md  README.md  SANITIZATION_REPORT.md  docker-compose.prod.yml  env.example  pyproject.toml
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: bridge-dashboard.json
src/chorus_bridge/: __main__.py  app.py  compose.yml
src/chorus_bridge/api/: __init__.py
src/chorus_bridge/api/v1/: health.py  routes.py
src/chorus_bridge/core/: __init__.py  event_bus.py  jwt_auth.py  rate_limiter.py  security.py  settings.py  trust.py
src/chorus_bridge/db/: __init__.py  base.py  models.py  repository.py
src/chorus_bridge/models/: __init__.py  federation.py
src/chorus_bridge/proto/: federation.proto  federation_messages.py  federation_pb2.py  federation_pb2_grpc.py
src/chorus_bridge/schemas/: __init__.py  bridge.py
src/chorus_bridge/services/: __init__.py  activitypub.py  activitypub_worker.py  bridge.py  conductor.py  conductor_cache.py  conductor_client.py  conductor_pool.py  libp2p_bridge.py  outbound_federation_worker.py
tests/: temp_fastapi_di_test.py  test_bridge_api.py  test_federation_messages.py  test_protobuf_messages.py
tests/services/: test_bridge_service.py
